Fix vboxContainer alignment for css id selector in Theme.css

--- a/src/sample/resources/Theme.css
+++ b/src/sample/resources/Theme.css
@@ -19,6 +19,7 @@ Vbox{
 }
 
 #vboxContainer{
+    -fx-alignment: center;
     -fx-position-shape: absolute;
     -fx-top: 50%;
     -fx-left: 50%;
